--- a/HW4/HW4/App.xaml
+++ b/HW4/HW4/App.xaml
@@ -87,9 +87,15 @@
             <SolidColorBrush x:Key="SliderThumb.Disabled.Border" Color="#FFD9D9D9"/>
             <SolidColorBrush x:Key="SliderThumb.Track.Background" Color="#FFE7EAEA"/>
             <SolidColorBrush x:Key="SliderThumb.Track.Border" Color="#FFD6D6D6"/>
+            
             <ControlTemplate x:Key="SliderThumbHorizontalDefault" TargetType="{x:Type Thumb}">
                 <Grid HorizontalAlignment="Center" UseLayoutRounding="True" VerticalAlignment="Center">
                     <Path x:Name="grip" Data="M 0,0 C0,0 11,0 11,0 11,0 11,18 11,18 11,18 0,18 0,18 0,18 0,0 0,0 z" Fill="{StaticResource SliderThumb.Static.Background}" Stroke="{StaticResource SliderThumb.Static.Border}" SnapsToDevicePixels="True" Stretch="Fill" StrokeThickness="1" UseLayoutRounding="True" VerticalAlignment="Center"/>
+                    <Ellipse Fill="#fa5454" Width="30" Height="30" StrokeThickness="20">
+                        <Ellipse.Stroke>
+                            <SolidColorBrush Color="#fa5454" Opacity="0.1"/>
+                        </Ellipse.Stroke>
+                    </Ellipse>
                 </Grid>
             </ControlTemplate>
             <ControlTemplate x:Key="SliderThumbHorizontalTop" TargetType="{x:Type Thumb}">
@@ -140,10 +146,15 @@
                         </Grid.RowDefinitions>
                         <TickBar x:Name="TopTick" Fill="{TemplateBinding Foreground}" Height="4" Margin="0,0,0,2" Placement="Top" Grid.Row="0" Visibility="Collapsed"/>
                         <TickBar x:Name="BottomTick" Fill="{TemplateBinding Foreground}" Height="4" Margin="0,2,0,0" Placement="Bottom" Grid.Row="2" Visibility="Collapsed"/>
-                        <Border x:Name="TrackBackground" Background="{StaticResource SliderThumb.Track.Background}" BorderBrush="{StaticResource SliderThumb.Track.Border}" BorderThickness="1" Height="4.0" Margin="5,0" Grid.Row="1" VerticalAlignment="center">
-                            <Canvas Margin="-6,-1">
-                                <Rectangle x:Name="PART_SelectionRange" Fill="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" Height="4.0" Visibility="Hidden"/>
-                            </Canvas>
+                        <Border x:Name="TrackBackground" Background="{StaticResource SliderThumb.Track.Background}" BorderThickness="0" CornerRadius="3" Height="6" Margin="13,0" Grid.Row="1" VerticalAlignment="center">
+                            <Border x:Name="PART_SelectionRange" CornerRadius="3 0 0 3" HorizontalAlignment="Left" Height="6">
+                                <Border.Background>
+                                    <LinearGradientBrush>
+                                        <GradientStop Color="#fea15c" Offset="0"/>
+                                        <GradientStop Color="#f95355" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <Track x:Name="PART_Track" Grid.Row="1">
                             <Track.DecreaseRepeatButton>
@@ -153,7 +164,7 @@
                                 <RepeatButton Command="{x:Static Slider.IncreaseLarge}" Style="{StaticResource RepeatButtonTransparent}"/>
                             </Track.IncreaseRepeatButton>
                             <Track.Thumb>
-                                <Thumb x:Name="Thumb" Focusable="False" Height="18" OverridesDefaultStyle="True" Template="{StaticResource SliderThumbHorizontalDefault}" VerticalAlignment="Center" Width="11"/>
+                                <Thumb x:Name="Thumb" Focusable="False" Height="30" OverridesDefaultStyle="True" Template="{StaticResource SliderThumbHorizontalDefault}" VerticalAlignment="Center" Width="30"/>
                             </Track.Thumb>
                         </Track>
                     </Grid>
