--- a/HW4/HW4/InfoCard.xaml
+++ b/HW4/HW4/InfoCard.xaml
@@ -9,7 +9,8 @@
                 <TextBlock Text="{Binding ElementName=infoCard, Path=Title}" Style="{StaticResource titleText1}"/>
             </StackPanel>
             <TextBlock Text="{Binding ElementName=infoCard, Path=SubTitle}" Style="{StaticResource titleText2}"/>
-            <Slider x:Name="slider" Margin="0 5 0 0" IsSelectionRangeEnabled="True" 
+            <Slider Style="{DynamicResource SliderStyle1}" x:Name="slider" Margin="0 5 0 0" 
+                    IsSelectionRangeEnabled="True" 
                     Value="{Binding ElementName=infoCard, Path=Amount}" 
                     SelectionEnd="{Binding ElementName=slider, Path=Value}"/>
         </StackPanel>
