--- a/HW4/HW4/DashboardScreen.xaml
+++ b/HW4/HW4/DashboardScreen.xaml
@@ -2,10 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             
+        xmlns:uc="clr-namespace:HW4"
+             
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HW4" Width="400" Height="135"
-        mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800" 
+        xmlns:local="clr-namespace:HW4"
+        mc:Ignorable="d" d:DesignHeight="720" d:DesignWidth="1280" 
         Loaded="Dashboard_Loaded" Unloaded="Dashboard_Unloaded" Background="Transparent">
 
     <UserControl.Resources>
@@ -112,7 +115,9 @@
                 </Grid.ColumnDefinitions>
                 
                 <!--Card-->
-                
+                <uc:InfoCard Grid.Column="0" Title="Sales" SubTitle="" Amount="3" Image="/Images/plus.png"/>
+                <uc:InfoCard Grid.Column="1" Title="" SubTitle="" Amount="3" Image="/Images/plus.png"/>
+                <uc:InfoCard Grid.Column="2" Title="" SubTitle="" Amount="3" Image="/Images/plus.png"/>
             </Grid>
         </Grid>
     </Border>
