--- a/HW4/HW4/UI/Orders/AddPromo.xaml
+++ b/HW4/HW4/UI/Orders/AddPromo.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HW4.UI.Orders.AddPromo"
+﻿<Window x:Class="HW4.AddPromo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,11 +8,10 @@
         Title="AddPromo" Height="223" Width="389">
     <Grid>
         <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label FontSize="20" Content="{Binding OrderID}"></Label>
-            <Label FontSize="20" Content="{Binding PhoneName}"></Label>
-            <Label Content="Select Customer" FontSize="20" FontFamily="Arial" HorizontalAlignment="Center"/>
-            <ComboBox Name="Customer" Height="44" Width="201" DisplayMemberPath="PromoName" ItemsSource="{Binding Promos}" SelectedValue="{Binding SelectedCustomer}"/>
-            <Button Height="25" Width="44" HorizontalAlignment="Center" Content="Update" Click="UpdateQuantity" Margin="0, 8, 0, 0"/>
+            <Label FontSize="20" Content="{Binding OrderID}" Name="Order"></Label>
+            <Label Content="Select Promo" FontSize="20" FontFamily="Arial" HorizontalAlignment="Center"/>
+            <ComboBox Name="Promo" Height="44" Width="201" DisplayMemberPath="PromoName" ItemsSource="{Binding PROMOTIONSINORDER}" SelectedValue="{Binding SelectedCustomer}"/>
+            <Button Height="25" Width="44" HorizontalAlignment="Center" Content="Update" Click="AddNewPromo" Margin="0, 8, 0, 0"/>
         </StackPanel>
     </Grid>
 </Window>
