--- a/HW4/HW4/UI/Orders/AddPromo.xaml
+++ b/HW4/HW4/UI/Orders/AddPromo.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HW4.UI.Orders"
+        xmlns:local="clr-namespace:HW4"
         mc:Ignorable="d"
         Title="AddPromo" Height="223" Width="389">
     <Grid>
