--- a/HW4/HW4/DashboardScreen.xaml
+++ b/HW4/HW4/DashboardScreen.xaml
@@ -14,14 +14,14 @@
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisConv"/>
     </UserControl.Resources>
-    
+
     <Border CornerRadius="25" Padding="20" Background="#f7f6f4" 
             MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <Grid Margin="-2,0,2,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1.2*"/>
-                <ColumnDefinition Width="4*"/>
-                <ColumnDefinition Width="1.8*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="1.5*"/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
@@ -69,7 +69,7 @@
                     </StackPanel>
                 </StackPanel>
             </Border>
-            
+
             <!--Search Section-->
             <Border Grid.Column="1" Margin="20 0 20 20" Style="{StaticResource whiteBorder}">
                 <Grid>
@@ -81,7 +81,7 @@
                                     <GradientStop Color="#fa5654" Offset="1"/>
                                 </LinearGradientBrush>
                             </Border.Background>
-                            
+
                             <Image Width="40" Height="40" Source="/Images/Search.png"/>
                         </Border>
 
@@ -90,7 +90,7 @@
                             <TextBlock Text="Have a good day!!!" Foreground="#6c879a" Margin="0 3 0 0"/>
                         </StackPanel>
                     </StackPanel>
-                    
+
                     <!--Search TextBox-->
                     <Grid Width="300" HorizontalAlignment="Right">
                         <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#868686" Panel.ZIndex="1"
@@ -113,29 +113,29 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <!--Card-->
                 <uc:InfoCard Grid.Column="0" Title="Sales" SubTitle="Compared to..." Amount="3" Image="/Images/plus.png"/>
                 <uc:InfoCard Grid.Column="1" Title="Purchase" SubTitle="Compared to..." Amount="3" Image="/Images/plus.png"/>
                 <uc:InfoCard Grid.Column="2" Title="Return" SubTitle="Compared to..." Amount="3" Image="/Images/plus.png"/>
             </Grid>
-            
+
             <!--Main Chart Section-->
-            <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20 20 20 0">
+            <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20,5,20,0">
                 <Grid Margin="15 5">
                     <!--Title-->
                     <TextBlock Text="Sales Figures" Style="{StaticResource titleText1}"/>
 
 
-                    <!--TitleForChart-->  
-                    <uc:TitleForChart HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 8 10 0"/> 
-                    
+                    <!--TitleForChart-->
+                    <uc:TitleForChart HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 8 10 0"/>
+
                     <!--Chart-->
-                    
-                    
+                    <uc:ReportChart x:Name="Chart" HorizontalAlignment="Center" VerticalAlignment="Center" Height="276" Width="765"/>
+
                     <!--Note-->
-                    
-                    <Grid VerticalAlignment="Bottom" Margin="10 0">
+
+                    <Grid VerticalAlignment="Bottom" Margin="10 -20">
                         <Icon:PackIconMaterial Kind="Information" Foreground="#f96654"/>
                         <TextBlock TextWrapping="Wrap" Margin="30 0 0 0" LineHeight="18" Foreground="#b7b7b7" 
                                    Text="Net Sales, Found on the income statement are used to calculate this ration Return ..."/>
