--- a/HW4/HW4/ReportChart.xaml
+++ b/HW4/HW4/ReportChart.xaml
@@ -1,12 +1,56 @@
 ﻿<UserControl x:Class="HW4.ReportChart"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HW4"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Name ="Chart">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <lvc:CartesianChart Name="chart" LegendLocation="Bottom" 
+                            HorizontalAlignment ="Left" Grid.Row="1" Grid.ColumnSpan="5"
+                            Series="{Binding SeriesCollection}" Margin="10,10,0,10" 
+                            Loaded="chart_Loaded" Width="780">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="Month" Labels="{Binding Labels}" ></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
+
+        <StackPanel Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock Text="Choose Date " Margin="0,0,0,5" Width="220" TextAlignment="Center"/>
+            <StackPanel Orientation="Horizontal">
+                <DatePicker Name="startDatePicker" />
+                <TextBlock Text="-" Margin="5,0"/>
+                <DatePicker Name="endDatePicker"/>
+            </StackPanel>
+            <Button Content="Show" Click="ShowDateRange" Name="Search" HorizontalAlignment="Center" Margin="0,5"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Click="ChartWithDateButton_Click" Content="Ngày" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Click="ChartWithMonthButton_Click" Content="Tháng" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Click="ChartWithYearButton_Click" Content="Năm" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+        </StackPanel>
     </Grid>
 </UserControl>
