--- a/HW4/HW4/UI/Customers/GrantPromoDialog.xaml
+++ b/HW4/HW4/UI/Customers/GrantPromoDialog.xaml
@@ -5,16 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HW4.UI.Customers"
         mc:Ignorable="d"
-        Title="GrantPromoDialog" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="Choose a Promotion to grant" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="PromoDataGrid" Grid.Column="1" Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue">
+
+        <StackPanel VerticalAlignment="Center" x:Name="TitlePanel">
+            <TextBlock>
+                Grant promotion to Customer with ID: <Run Text="{Binding .}"/>
+            </TextBlock>
+        </StackPanel>
+
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Right" Orientation="Horizontal">
+            <TextBox x:Name="SearchTextBox" Width="250" Height="30" VerticalContentAlignment="Center" d:Text="Promotion name"/>
+            <Button x:Name="SearchButton" Content="Search" Width="60" Height="30" Margin="0,0,10,0" Click="SearchButton_Click"/>
+        </StackPanel>
+
+        <DataGrid x:Name="PromoDataGrid" Grid.Row="1" Grid.Column="1" Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridCell}">
                     <EventSetter Event="MouseDoubleClick" Handler="DataGridCell_MouseDoubleClick"/>
@@ -22,8 +35,8 @@
             </DataGrid.Resources>
         </DataGrid>
 
-        <StatusBar Grid.Row="1" Grid.ColumnSpan="2"/>
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StatusBar Grid.Row="2" Grid.ColumnSpan="2"/>
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button x:Name="PrevButton" Content="Prev" Width="40" Height="20" Margin="0,0,10,0" Click="PrevButton_Click"/>
             <ComboBox x:Name="PageSelectComboBox" Width="100" Height="20" SelectionChanged="PageSelectComboBox_SelectionChanged">
                 <ComboBox.ItemTemplate>
