Refactoring UI for Orders

--- a/HW4/HW4/MainWindow.xaml
+++ b/HW4/HW4/MainWindow.xaml
@@ -89,7 +89,7 @@
                 </Fluent:RibbonGroupBox>
             </Fluent:RibbonTabItem>
             <Fluent:RibbonTabItem Header="Orders">
-                <!--<Fluent:RibbonGroupBox Header="Order Control">
+                <Fluent:RibbonGroupBox Header="Order Control">
                     <Fluent:Button Header="Add" x:Name="AddOrderRibbonButton" Click="AddOrderRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
                             <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
@@ -104,7 +104,7 @@
                 <Fluent:RibbonGroupBox Header="Order Staus">
                     <Fluent:Button Header="Deliver" x:Name="DeliverButton" Click="DeliverRibbonButton_Click">
                         <Fluent:Button.LargeIcon>
-                            <Image Source="Images/plus.png" RenderOptions.BitmapScalingMode="HighQuality"/>
+                            <Image Source="Images/plus_blue.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
                     <Fluent:Button Header="Cancel" x:Name="CancelButton" Click="CancelRibbonButton_Click">
@@ -112,7 +112,7 @@
                             <Image Source="Images/delete.png" RenderOptions.BitmapScalingMode="HighQuality"/>
                         </Fluent:Button.LargeIcon>
                     </Fluent:Button>
-                </Fluent:RibbonGroupBox>-->
+                </Fluent:RibbonGroupBox>
             </Fluent:RibbonTabItem>
             <Fluent:RibbonTabItem Header="Customers">
                 <Fluent:RibbonGroupBox Header="Utilities">
