--- a/HW4/HW4/ReportChart.xaml
+++ b/HW4/HW4/ReportChart.xaml
@@ -23,7 +23,7 @@
         <lvc:CartesianChart Name="chart" LegendLocation="Bottom" 
                             HorizontalAlignment ="Left" Grid.Row="1" Grid.ColumnSpan="5"
                             Series="{Binding SeriesCollection}" Margin="10,10,0,10" 
-                            Loaded="Chart_Loaded" Width="780">
+                            Loaded="chart_Loaded" Width="780">
             <lvc:CartesianChart.AxisX>
                 <lvc:Axis Title="Month" Labels="{Binding Labels}" ></lvc:Axis>
             </lvc:CartesianChart.AxisX>
