--- a/HW4/HW4/UI/Orders/PhoneOrder.xaml
+++ b/HW4/HW4/UI/Orders/PhoneOrder.xaml
@@ -46,8 +46,8 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="2" Grid.RowSpan="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Name="Prev" Click="Page" Content="Prev" Margin="0, 0, 5, 0" Width="37" Height="23"/>
-            <Button Name="Next" Click="Page" Content="Next" Margin="10, 0, 0, 0" Width="35" Height="23"/>
+            <Button Name="Prev" Click="PagePrev" Content="Prev" Margin="0, 0, 5, 0" Width="37" Height="23"/>
+            <Button Name="Next" Click="PageNext" Content="Next" Margin="10, 0, 0, 0" Width="37" Height="23"/>
         </StackPanel>
         <DataGrid Name="OrderView" ItemsSource="{Binding}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="0" Grid.RowSpan="2" Grid.ColumnSpan="4" Margin="381,0,0,0">
             <DataGrid.Resources>
