--- a/HW4/HW4/DashboardScreen.xaml
+++ b/HW4/HW4/DashboardScreen.xaml
@@ -123,23 +123,8 @@
             <!--Main Chart Section-->
             <Border Grid.Column="1" Grid.Row="2" Style="{StaticResource whiteBorder}" Margin="20,5,20,0">
                 <Grid Margin="15 5">
-                    <!--Title-->
-                    <TextBlock Text="Sales Figures" Style="{StaticResource titleText1}"/>
-
-
-                    <!--TitleForChart-->
-                    <uc:TitleForChart HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 8 10 0"/>
-
                     <!--Chart-->
-                    <uc:ReportChart x:Name="Chart" HorizontalAlignment="Center" VerticalAlignment="Center" Height="276" Width="765"/>
-
-                    <!--Note-->
-
-                    <Grid VerticalAlignment="Bottom" Margin="10 -20">
-                        <Icon:PackIconMaterial Kind="Information" Foreground="#f96654"/>
-                        <TextBlock TextWrapping="Wrap" Margin="30 0 0 0" LineHeight="18" Foreground="#b7b7b7" 
-                                   Text="Net Sales, Found on the income statement are used to calculate this ration Return ..."/>
-                    </Grid>
+                    <uc:ReportChart x:Name="Chart" HorizontalAlignment="Center" Width="745" Margin="0,-24,0,0" Height="389" VerticalAlignment="Top"/>
                 </Grid>
             </Border>
 
@@ -155,7 +140,9 @@
                     <StackPanel>
                         <TextBlock Text="Sales List" Style="{StaticResource titleText1}"/>
                         <TextBlock Style="{StaticResource titleText2}" TextWrapping="Wrap" Margin="0 10"  
-                       Text="This is the sales data with the most revenue for this month"/>
+                                   Text="This is the sales data with the most revenue for this month"/>
+
+                        <!--Infors-->
                     </StackPanel>
                 </Border>
             </Grid>
