--- a/HW4/HW4/ReportChart.xaml
+++ b/HW4/HW4/ReportChart.xaml
@@ -3,17 +3,19 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks" 
              xmlns:local="clr-namespace:HW4"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Name ="Chart">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2.5*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -21,11 +23,11 @@
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
         <lvc:CartesianChart Name="chart" LegendLocation="Bottom" 
-                            HorizontalAlignment ="Left" Grid.Row="1" Grid.ColumnSpan="5"
-                            Series="{Binding SeriesCollection}" Margin="10,10,0,10" 
-                            Loaded="chart_Loaded" Width="780">
+                            HorizontalAlignment ="Left" Grid.Row="1"
+                            Series="{Binding SeriesCollection}" Margin="0,10,0,38" 
+                            Loaded="chart_Loaded" Width="780" Grid.ColumnSpan="5">
             <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Month" Labels="{Binding Labels}" ></lvc:Axis>
+                <lvc:Axis Labels="{Binding Labels}" ></lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
 
@@ -51,5 +53,19 @@
             <Button Click="ChartWithYearButton_Click" Content="Năm" 
                     HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
         </StackPanel>
+        <StackPanel Grid.Column="4" Grid.Row="0" HorizontalAlignment="Center">
+            <!--Title-->
+            <TextBlock Text="Sales Figure" Style="{StaticResource titleText1}"/>
+            <Button Click="ChartWithYearButton_Click" Content="Năm" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Height="26" Width="56"/>
+            
+        </StackPanel>
+        <!--Note-->
+
+        <Grid VerticalAlignment="Bottom" Margin="10 -20" Grid.ColumnSpan="5" Grid.Row="2" HorizontalAlignment="Center">
+            <Icon:PackIconMaterial Kind="Information" Foreground="#f96654"/>
+            <TextBlock TextWrapping="Wrap" Margin="30 0 0 0" LineHeight="18" Foreground="#b7b7b7" 
+               Text="Net Sales, Found on the income statement are used to calculate this ration Return ..."/>
+        </Grid>
     </Grid>
 </UserControl>
