--- a/HW4/HW4/UI/Customers/CustomerManagementUserControl.xaml
+++ b/HW4/HW4/UI/Customers/CustomerManagementUserControl.xaml
@@ -40,5 +40,8 @@
             </ComboBox>
             <Button x:Name="NextButton" Content="Next" Width="40" Height="20" Margin="10,0,0,0" Click="NextButton_Click"/>
         </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right">
+            <ComboBox Width="40" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="ItemPerPageComboBox" SelectedIndex="1" SelectionChanged="ItemPerPageComboBox_SelectionChanged"/>
+        </StackPanel>
     </Grid>
 </UserControl>
