--- a/HW4/HW4/UI/Customers/GrantPromoDialog.xaml
+++ b/HW4/HW4/UI/Customers/GrantPromoDialog.xaml
@@ -35,7 +35,9 @@
             </DataGrid.Resources>
         </DataGrid>
 
-        <StatusBar Grid.Row="2" Grid.ColumnSpan="2"/>
+        <StatusBar Grid.Row="2" Grid.ColumnSpan="2">
+            <TextBlock x:Name="InstructionTextBox" Text="Double click on a Promotion to grant it"/>
+        </StatusBar>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button x:Name="PrevButton" Content="Prev" Width="40" Height="20" Margin="0,0,10,0" Click="PrevButton_Click"/>
             <ComboBox x:Name="PageSelectComboBox" Width="100" Height="20" SelectionChanged="PageSelectComboBox_SelectionChanged">
@@ -49,5 +51,6 @@
             </ComboBox>
             <Button x:Name="NextButton" Content="Next" Width="40" Height="20" Margin="10,0,0,0" Click="NextButton_Click"/>
         </StackPanel>
+        
     </Grid>
 </Window>
